# magick-iii

./: .cvsignore  .local_vimrc  Doxyfile  Makefile.am  autogen.sh  configure.ac  magick.kdevelop
doc/: Makefile.am  magick.ini  magick.log.ini  magick.services.ini  magick.storage.ini  postgres.sql
doc/ircd/: Makefile.am  ircd.bahamut.ini
include/: committee.h  dependency.h  livechannel.h  livememo.h  liveuser.h  magick.h  memo.h  message.h  otherdata.h  protocol.h  server.h  service.h  serviceuser.h  storage.h  storageinterface.h  storedchannel.h  storednick.h  storeduser.h  template.h  text.h
po/: .cvsignore  Makevars  POTFILES.in  en_GB.po
src/: .cvsignore  Makefile.am  chanserv.cpp  committee.cpp  commserv.cpp  config_init.cpp  config_parse.cpp  dependency.cpp  livechannel.cpp  livememo.cpp  liveuser.cpp  magick.cpp  main.cpp  memo.cpp  message.cpp  nickserv.cpp  operserv.cpp  other.cpp  otherdata.cpp  protocol.cpp  server.cpp  service.cpp  storage.cpp  storageinterface.cpp  storedchannel.cpp  storedchannel2.cpp  storednick.cpp  storeduser.cpp  template.cpp  text.cpp
